[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Utilities/landmine_B.png" type="Texture" id=1]
[ext_resource path="res://GameContent/Utilities/Landmine_Area2D.gd" type="Script" id=2]
[ext_resource path="res://GameContent/Utilities/Landmine_Trigger_Area2D.gd" type="Script" id=3]
[ext_resource path="res://GameContent/Utilities/Landmine.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sound/Local_Death.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[sub_resource type="CircleShape2D" id=2]
radius = 25.0

[node name="Landmine" type="Node2D" groups=[
"Landmines",
]]
script = ExtResource( 4 )

[node name="Explosion_Area2D" type="Area2D" parent="." groups=[
"Landmine_Bodies",
]]
monitoring = false
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion_Area2D"]
shape = SubResource( 1 )

[node name="Trigger_Area2D" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger_Area2D"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 2

[node name="Detonation_Timer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="Death_Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Activation_Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Explosion_Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 6.0
pitch_scale = 0.25
attenuation = 0.233258
